--- a/css/styles.css
+++ b/css/styles.css
@@ -14,19 +14,25 @@ header {
 
 .product {
   background-color: blue;
+  text-align: center;
 }
 
-#product_1 {
+.item {
+  height: 100%;
+  width: auto;
+}
+
+#product_0 {
   grid-column-start: 1;
   grid-column-end: 5;
 }
 
-#product_2 {
+#product_1 {
   grid-column-start: 5;
   grid-column-end: 9;
 }
 
-#product_3 {
+#product_2 {
   grid-column-start: 9;
   grid-column-end: 13;
 }
